style.css
/* ... */
.page .has-thumbnail .entry-title img,
.single .has-thumbnail .entry-title img {
	/*position: absolute;*/
	width: 100%;
	bottom: 0;
	left: 0;
	-webkit-filter: none;
}
*/.entry-title h1 {
	position: relative;
	z-index: 2;
}
article.hentry {
}
article.hentry:last-child {
}
article.hentry.sticky {
	background: #ddf4f4;
}

.entry-content {
	border-top: 1px solid #bbb;
	padding: 25px 0 50px;
	-o-transition:.5s;
	-ms-transition:.5s;
	-moz-transition:.5s;
	-webkit-transition:.5s;
	transition:.5s;
}
.entry-content:hover {
	border-top-color: #000;
}

.entry-content footer {
}

footer {
	color: #777;
	font-size: 1.0rem;
	line-height: 160%;
}

header.page-footer {
	background: rgba( 220, 220, 220, 0.4 );
	padding: 100px;
	font-size: 1.4rem;
}

/*
 ####   ####  #    # #    # ###### #    # #####  ####
#    # #    # ##  ## ##  ## #      ##   #   #   #
#      #    # # ## # # ## # #####  # #  #   #    ####
#      #    # #    # #    # #      #  # #   #        #
#    # #    # #    # #    # #      #   ##   #   #    #
 ####   ####  #    # #    # ###### #    #   #    ####
*/
#comments {
	border-top: 1px solid #bbb;
	padding: 0 0 50px;
}
.comment-list {
	padding: 0;
	margin: 0;
	font-size: 1.3rem;
	line-height: 160%;
}
.comment-list li {
	list-style: none;
	padding: 20px 0;
	margin: 0;
}
li.comment li.comment {
	margin-left: 40px;
}
.comment-meta {
	font-size: 1rem;
	line-height: 1.3rem;
}
	header.comment-meta {
	}
		header.comment-meta .avatar {
			float: left;
			margin: 0 5px 0 0;
		}
		.bypostauthor header.comment-meta .avatar {
			-o-transition:.5s;
			-ms-transition:.5s;
			-moz-transition:.5s;
			-webkit-transition:.5s;
			transition:.5s;
			border-bottom: 3px solid #555;
		}
		.bypostauthor header.comment-meta .avatar:hover {
			border-bottom-width: 5px;
		}
	footer.comment-meta {
		text-align: left;
	}
	.comment-meta cite {
		display: block;
	}
.comment-content {
}
li.comment {
}
li.comment:last-child {
	border-bottom: 0;
	padding-bottom: 0;
}
li.comment .reply {

}

#respond {
	font-size: 1.3rem;
	line-height: 160%;
}

.comment-form-author,
.comment-form-email,
.comment-form-url {
	margin: 0 0 20px;
	float: left;
	width: 32%;
}
.comment-form-email {
	margin: 0 2%;
}
.comment-form-author input,
.comment-form-email input,
.comment-form-url input,
#comment {
	display: block;
	padding: 5px;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	width: 100%;
	font-size: 1.3rem;
	border: 1px solid #ccc;
}
.comment-form-author input:focus,
.comment-form-email input:focus,
.comment-form-url input:focus,
#comment:focus {
	outline: 0;
	box-shadow: 0 3px 12px rgba( 100, 100, 100, 0.5 );
}
.form-allowed-tags code {
	white-space: normal;
}

/*
#####  #    # ##### #####  ####  #    #  ####
#    # #    #   #     #   #    # ##   # #
#####  #    #   #     #   #    # # #  #  ####
#    # #    #   #     #   #    # #  # #      #
#    # #    #   #     #   #    # #   ## #    #
#####   ####    #     #    ####  #    #  ####
*/
input[type="submit"],
input[type="button"],
button,
.button {
	border: none;
	padding: 10px;
	margin: 0;
	background: #099;
	font-family: 'Source Sans Pro';
	font-size: 1rem;
	cursor: pointer;
	color: #ddd;
	-o-transition:.5s;
	-ms-transition:.5s;
	-moz-transition:.5s;
	-webkit-transition:.5s;
	transition:.5s;
}
input[type="submit"]:hover,
input[type="button"]:hover,
button:hover,
.button:hover {
	background: #077;
	color: #fff;
}
input[type="submit"]:active,
input[type="button"]:active,
button:active,
.button:active,
input[type="submit"]:focus,
input[type="button"]:focus,
button:focus,
.button:focus {
	outline: 0;
	background: #eee;
}
/*
#####   ####   ####  #####  ####     #    #   ##   #    #
#    # #    # #        #   #         ##   #  #  #  #    #
#    # #    #  ####    #    ####     # #  # #    # #    #
#####  #    #      #   #        #    #  # # ###### #    #
#      #    # #    #   #   #    #    #   ## #    #  #  #
#       ####   ####    #    ####     #    # #    #   ##
*/
.home-link {
	position: fixed;
	z-index: 2;
	top: 40px;
	left: 40px;
	font-size: 4em;
	color: #ddd;
	text-decoration: none;
}
/*
nav.post-nav {
	position: relative;
	width: calc( 100% + 100px );
	left: -50px;
}
.post-nav-item {
	padding: 30px;
}
.post-nav-prev {
	padding-right: 0;
	float: right;
}
.post-nav-next {
	padding-left: 0;
	float: left;
}
*/
.post-nav-item {
	position: fixed;
	top: 50%;
	font-size: 3rem;
}
.post-nav-item a {
	color: rgba( 84, 84, 84, 0.4 );
}
.post-nav-item a:hover {
	color: #333;
}
.post-nav-prev {
	right: 10px;
}
.post-nav-next {
	left: 10px;
}
/*
#####   ####   ####  #####    #    #   ##   #    #
#    # #    # #        #      ##   #  #  #  #    #
#    # #    #  ####    #      # #  # #    # #    #
#####  #    #      #   #      #  # # ###### #    #
#      #    # #    #   #      #   ## #    #  #  #
#       ####   ####    #      #    # #    #   ##
*/
/*
#####    ##    ####  ###### #####     #    #   ##   #    #
#    #  #  #  #    # #      #    #    ##   #  #  #  #    #
#    # #    # #      #####  #    #    # #  # #    # #    #
#####  ###### #  ### #      #    #    #  # # ###### #    #
#      #    # #    # #      #    #    #   ## #    #  #  #
#      #    #  ####  ###### #####     #    # #    #   ##
*/
nav.paged-nav {
	text-align: center;
}
nav > .paged-item,
nav a {
	text-indent: 999em;
	overflow: hidden;
	margin: 0 5px;
	display: inline-block;
	width: 16px;
	height: 16px;
	border-radius: 10px;
}
nav a {
	background: rgba( 140, 140, 140, 0.4 );
}
nav .paged-item {
	background: rgba( 200, 200, 200, 0.4 );
}
header a.genericon {

	/*text-indent: -999rem;*/
	overflow: hidden;
}
/* ... */

